--- a/assets/styles.css
+++ b/assets/styles.css
@@ -8,7 +8,9 @@
 
 body {
     background-image: url(img/background.jpg);
-    
+    background-color: #000;
+    background-size: cover;
+    background-position: ceter top;
 }
 
 body::before {
@@ -20,7 +22,7 @@ body::before {
 }
 
 header {
-    height: 10%;
+ /*   height: 10%;*/
     padding: 20px 50px;
     position: relative;
 }
@@ -31,8 +33,8 @@ header img {
 }
 
 main {
-    width: 100vw;
-    height: 90%;
+/*    width: 100vw;
+    height: 90%;*/
     display: grid;
     place-items: center;
 }
@@ -93,16 +95,22 @@ main {
 }
 
 .box-movies {
-    background-color: black;
-    width: 100%;
-    height: 60vh;
+    background-color: #000;
+    width: 100vw;
+    height: 100vh;
+    margin-top: 150px;
     padding: 20px 100px;
-    margin: 200px;
+    position: relative;
+}
+
+h2 {
+    color: #fff;
+    text-align: center;
 }
 
 .list-films {
     display: grid;
-    grid-template-columns: 70px 70px 70px;
+    grid-template-columns: 100px 100px 100px 100px 100px;
     gap: 50px;
 }
 
@@ -114,4 +122,19 @@ li {
     width: 70px;
     height: 100px;
     position: relative;
+}
+
+footer {
+    height: 25px;
+    background-color: #e50914;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+footer p {
+    font-size: 13px;
+    text-align: center;
+    font-weight: lighter;
 }
