--- a/assets/styles.css
+++ b/assets/styles.css
@@ -9,8 +9,8 @@
 body {
     background-image: url(img/background.jpg);
     background-color: #000;
-    background-size: cover;
-    background-position: ceter top;
+/*    background-size: cover;
+    background-position: ceter top;*/
 }
 
 body::before {
@@ -34,7 +34,7 @@ header img {
 
 main {
 /*    width: 100vw;
-    height: 90%;*/
+    height: 400px;*/
     display: grid;
     place-items: center;
 }
@@ -97,8 +97,8 @@ main {
 .box-movies {
     background-color: #000;
     width: 100vw;
-    height: 100vh;
-    margin-top: 150px;
+    min-height: 100vh;
+    margin-top: 100px;
     padding: 20px 100px;
     position: relative;
 }
@@ -106,21 +106,23 @@ main {
 h2 {
     color: #fff;
     text-align: center;
+    margin: 15px 0 50px 0;
 }
 
-.list-films {
+/*.list-films {
     display: grid;
-    grid-template-columns: 100px 100px 100px 100px 100px;
-    gap: 50px;
-}
+    grid-column-start: 200px 200px 200px 200px;
+}*/
 
-li {
-    width: 70px;
+.film {
+    width: 150px;
+    height: 250px;
+    margin: 25px 25px;
 }
 
 .film img {
-    width: 70px;
-    height: 100px;
+    width: 150px;
+    height: 250px;
     position: relative;
 }
 
